Beställ till veckan på helgen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	
 	<!-- MASTER CSS (always loading last of all stylesheets)-->
-	<link rel="stylesheet" type="text/css" href="assets/css/css/main/main.css?v0.1">
+	<link rel="stylesheet" type="text/css" href="assets/css/css/main/main.css?v0.11">
 </head>
 <body>
 	<div class="top-content">
@@ -65,7 +65,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="clicks" class="hide">0</div>
+	<!-- <div id="clicks" class="">0</div> -->
+
 
 	<!-- Hämtar databas -->
 	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
@@ -73,12 +74,17 @@
 
 	<!-- Jquery -->
 	<script src="assets/js/libs/jquery-3.2.1.min.js"></script>
+
+	<!-- Momentjs -->
 	<script src="assets/js/libs/moment.min.js"></script>
 	<script src="assets/js/libs/moment-with-locales.min.js"></script>
+
+	<!-- Jquery Cookies -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	          
-	<script src="assets/js/script.js?v0.1"></script>
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
