--- a/info/index.html
+++ b/info/index.html
@@ -8,7 +8,6 @@
 
 	<!-- Ionicons fonts -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-	
 
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
@@ -16,12 +15,11 @@
 	<!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-
 	<!-- IonIcons -->
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	
 	<!-- MASTER CSS (always loading last of all stylesheets)-->
-	<link rel="stylesheet" type="text/css" href="../assets/css/css/main/main.css?v0.1">
+	<link rel="stylesheet" type="text/css" href="../assets/css/css/main/main.css?v0.11">
 </head>
 <body>
 	<div class="top-content">
@@ -52,7 +50,6 @@
 		</div>
 	</div>
 
-    
 	<!-- Hämtar databas -->
 	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 	<script src="../assets/js/config.js"></script>
@@ -62,8 +59,8 @@
 
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	  
-	<script src="../assets/js/info-script.js?v0.1"></script>
-
+	
+	<!-- info-script -->
+	<script src="../assets/js/info-script.js?v0.11"></script>
 </body>
 </html>
